# Quali

./: .gitignore  README.md  pyproject.toml  pythonq  quali-run.sh  quali.sh
src/quali2/: __init__.py  __main__.py  check.py  cli.py  reporting.py
src/quali2/analysis/: __init__.py  ast_visitor.py  engine.py  metrics.py  visitor.py
src/quali2/antlr/: Python3Lexer.py  Python3LexerBase.py  Python3Parser.py  Python3ParserListener.py  Python3ParserVisitor.py  __init__.py
src/quali2/detectors/: architecture.py  ast_detectors.py  design.py  fowler.py  implementation.py  ml.py
src/quali2/domain/: __init__.py  analysis_types.py  models.py
tests/: sample_smells.py  test_fowler.py  test_quali2.py  test_smells.py
